# Meta-Final

./: .gitignore  README.md  launch_hf_job.py
Docs/: DriftDesk_Hackathon_Plan.md  plan.md
driftdesk/: Dockerfile  README.md  __init__.py  baseline_eval_results.csv  client.py  driftdesk_grpo_training.ipynb  dummy_env.py  eval_harness.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  schemas.py  train.py
driftdesk/driftdesk_grpo_output/: README.md
driftdesk/driftdesk_grpo_output/checkpoint-100/: trainer_state.json
driftdesk/driftdesk_grpo_output/checkpoint-50/: adapter_config.json  trainer_state.json
driftdesk/server/: __init__.py  app.py  drift_controller.py  driftdesk_environment.py  policy_injector.py  reward_engine.py
driftdesk/server/task_modules/: __init__.py  airline.py  bank.py  base.py  insurance.py
driftdesk/tests/: test_drift_controller.py  test_reward_engine.py  test_task_modules.py
driftdesk/training/: __init__.py  config.py  grpo.py  model.py  rollout.py  sft.py
scripts/: make_plots.py
