[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-driftdesk"
version = "0.1.0"
description = "DriftDesk environment for OpenEnv — API schema drift RL training"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.2",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "websocket-client>=1.7.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
driftdesk-server = "driftdesk.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "driftdesk",
    "driftdesk.server",
    "driftdesk.server.task_modules",
    "driftdesk.training",
]

[tool.pytest.ini_options]
testpaths = ["driftdesk/tests"]
addopts = "-v --tb=short"
